--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Carol Brown by Flight Of The Concords</h1>
-        <br>
+        <br><br>
+        <a href="https://youtu.be/1cGoDns8wTA">Watch the music video here!</a>
         <p>
 Loretta
 Broke my heart in a letter
